@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

' UI Layer
package "ui" {
  class StockSearchView {
    - controller: StockSearchController
    - username: String
    + showResults(output: StockSearchOutputData): void
    + updateStatus(message: String): void
  }
}

' Interface Adapters Layer
package "interface_adapters.controllers" {
  class StockSearchController {
    - stockSearchInteractor: StockSearchInputBoundary
    - watchlistRepository: WatchlistRepository
    + search(keywords: String): void
    + isWatched(username: String, symbol: String): boolean
    + setWatched(username: String, symbol: String, name: String, exchange: String, watched: boolean): void
    + getWatchedSymbols(username: String): List<String>
  }
}

package "interface_adapters.presenters" {
  class StockSearchPresenter implements StockSearchOutputBoundary {
    - view: StockSearchView
    + present(output: StockSearchOutputData): void
  }
}

' Use Cases Layer
package "use case" {
  interface StockSearchInputBoundary {
    + execute(input: StockSearchInputData): void
  }

  interface StockSearchOutputBoundary {
    + present(output: StockSearchOutputData): void
  }

  class StockSearchInteractor implements StockSearchInputBoundary {
    - api: AlphaVantageAPI
    - outputBoundary: StockSearchOutputBoundary
    + execute(input: StockSearchInputData): void
  }

  class StockSearchInputData {
    - keywords: String
    + getKeywords(): String
  }

  class StockSearchOutputData {
    - success: boolean
    - message: String
    - results: List<StockSearchResult>
    + isSuccess(): boolean
    + getMessage(): String
    + getResults(): List<StockSearchResult>
  }
}

' Data / Frameworks Layer
package "data" {
  class AlphaVantageAPI {
    + searchStocks(keywords: String): List<StockSearchResult>
    + getQuote(symbol: String): StockQuote
    + getTimeSeries(symbol: String, interval: String): List<StockPriceData>
  }

  class StockSearchResult {
    - symbol: String
    - name: String
    - exchange: String
    - type: String
    - region: String
    - currency: String
  }

  interface WatchlistRepository {
    + isWatched(username: String, symbol: String): boolean
    + addWatched(username: String, symbol: String, name: String, exchange: String): void
    + removeWatched(username: String, symbol: String): void
    + findSymbolsByUsername(username: String): List<String>
  }

  class JdbcWatchlistRepository implements WatchlistRepository {
    - dataSource: DataSource
  }
}

' ===== Clean Architecture Flow =====
' Flow: Controller → Interactor → Data Access + Presenter → View

' Step 1: View → Controller
StockSearchView --> StockSearchController : search(keywords)

' Step 2: Controller → Interactor
StockSearchController --> StockSearchInputBoundary : execute(input)
StockSearchController --> StockSearchInputData : creates

' Step 3: Interactor → Data Access
StockSearchInteractor --> AlphaVantageAPI : searchStocks(keywords)

' Step 4: Interactor → Presenter (via Output Boundary)
StockSearchInteractor --> StockSearchOutputBoundary : present(output)
StockSearchInteractor --> StockSearchOutputData : creates

' Step 5: Presenter → View
StockSearchPresenter --> StockSearchView : showResults(output)

' Additional dependencies
StockSearchOutputData --> StockSearchResult : contains
StockSearchPresenter ..|> StockSearchOutputBoundary : implements
StockSearchInteractor ..|> StockSearchInputBoundary : implements
JdbcWatchlistRepository ..|> WatchlistRepository : implements
AlphaVantageAPI --> StockSearchResult : returns

' Note: StockSearchResult is an inner class of AlphaVantageAPI


@enduml
